--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -22,11 +22,12 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Build Docker image
-      run: docker build -t my-app .
-
-    - name: Log in to Azure Container Registry
-      run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login jsdemocontainer.azurecr.io -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin
-
-    - name: Push Docker image to Azure Container Registry
-      run: docker push jsdemocontainer.azurecr.io/my-app
+    - name: Build and Push Docker image
+      run: |
+        # Build Docker image with commit hash as the tag
+        DOCKER_TAG=$(echo $GITHUB_SHA | cut -c1-8)
+        docker build -t jsdemocontainer.azurecr.io/my-app:${DOCKER_TAG} .
+        docker push jsdemocontainer.azurecr.io/my-app:${DOCKER_TAG}
+      env:
+        DOCKER_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
