--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Log in to Azure Container Registry
+      run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login jsdemocontainer.azurecr.io -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin
+
     - name: Build and Push Docker image
       run: |
         # Build Docker image with commit hash as the tag
